[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/objets_en_mouvement/vue_de_haut/ObjetRaycast_haut.gd" type="Script" id=1]
[ext_resource path="res://Art/plancher1.png" type="Texture" id=2]




[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="ObjetRaycast_top_view" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="Collision_objet" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RayCastB" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 17 )

[node name="RayCastH" type="RayCast2D" parent="."]
cast_to = Vector2( 0, -17 )

[node name="RayCastD" type="RayCast2D" parent="."]
cast_to = Vector2( 17, 0 )

[node name="RayCastG" type="RayCast2D" parent="."]
cast_to = Vector2( -17, 0 )
